@@ -5,18 +5,15 @@
 $cs_lang = cs_translate('clansphere');
 
 $content = cs_paths('uploads/cache');
-unset($content['index.html']);
-unset($content['.htaccess']);
+unset($content['index.html'], $content['.htaccess']);
 
 $data['lang']['cache_cleared'] = '';
 $data['link']['reload'] = cs_url('clansphere','cache');
 $data['link']['empty_cache'] = cs_url('clansphere','cache','clear=1');
 
 if(!empty($_GET['clear'])) {
-  foreach($content AS $file => $name) {
-    unlink('uploads/cache/' . $file);
-  }
-  
+
+  cs_cache_clear();
   $content = array();
   $data['lang']['cache_cleared'] = cs_html_br(2) . $cs_lang['cache_cleared'];
 }
@@ -30,17 +27,15 @@ if(empty($content)) {
 }
 
 foreach($content AS $file => $name) {
-  if($file != ".htaccess") {
-    $date = filemtime('uploads/cache/' . $file) - date('Z');
-    $size = filesize('uploads/cache/' . $file);
-    $space = $space + $size;
-    $files++;
+  $date = filemtime('uploads/cache/' . $file) - date('Z');
+  $size = filesize('uploads/cache/' . $file);
+  $space = $space + $size;
+  $files++;
 
-    $data['cache'][$run]['file'] = $file;
-    $data['cache'][$run]['date'] = cs_date('unix',$date,1);
-    $data['cache'][$run]['size'] = cs_filesize($size);
-    $run++;
-	}
+  $data['cache'][$run]['file'] = $file;
+  $data['cache'][$run]['date'] = cs_date('unix',$date,1);
+  $data['cache'][$run]['size'] = cs_filesize($size);
+  $run++;
 }
 
 $data['count']['files'] = $files;
