@@ -3,3 +3,5 @@ UPDATE {pre}_options SET options_value = '2009-06-14' WHERE options_mod = 'clans
 UPDATE {pre}_options SET options_value = 43 WHERE options_mod = 'clansphere' AND options_name = 'version_id';
 
 UPDATE {pre}_users SET users_view = '' WHERE users_view NOT IN ('float', 'list');
+
+INSERT INTO {pre}_options (options_mod, options_name, options_value) VALUES ('clansphere', 'cache_unicode', '0');
