@@ -4,6 +4,7 @@ CHANGELOG
 ClanSphere 2009.0.1 >> 2009-06-XX
 ___________________________________________________________
 
+-> Added function cs_cache_clear and a check for the unicode extension (hajo)
 -> Added the possibility to use xhtml_old mode by using a setup.php entry (hajo)
 -> Fixed charset handling with file operations and escaped special lang chars (hajo)
 -> Fixed cs_sql_insertid with Microsoft SQL Server [sqlsrv extension] (hajo)
